# fastapi-sveltekit-template

./: Dockerfile  docker-compose.yaml  nginx.conf  post.md
api/: Dockerfile  pyproject.toml  requirements.txt
api/src/: main.py
api/src/modules/env_var/: __init__.py  index.py
api/src/routers/: api.py
api/src/routers/oauth/: oauth.py
backend/: requirements.txt
backend/frontend-build/: index.html
backend/frontend-build/_app/: version.json
backend/frontend-build/_app/immutable/assets/: _layout.DDMAxyV-.css
backend/frontend-build/_app/immutable/chunks/: debug.Xrctj--H.js  disclose-version.DmMw9pt8.js  entry.Qff9FVDl.js  index-client.CRgB5h3M.js  runtime.lZn-MjAl.js
backend/src/: main.py
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: hooks.ts
frontend/src/lib/components/: index.ts
frontend/src/lib/fetch/: index.ts
frontend/src/lib/open-api/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/about/: +page.svelte  +page.ts
frontend/src/routes/contact/: +page.svelte  +page.ts
spa/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json
spa/src/: app.d.ts  hooks.server.ts
spa/src/lib/components/: debug.svelte
spa/src/lib/openapi/: index.ts
spa/src/lib/remote-functions/: data.remote.ts
spa/src/lib/utils/: browser.ts  index.ts
spa/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  +page.ts
spa/src/routes/contact/: +page.svelte  +page.ts
spa/src/routes/me/: +page.svelte  +page.ts
(+7 files in other folders)
