[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.4",
    "fastapi[standard]>=0.117.1",
    "itsdangerous>=2.2.0",
    "mypy>=1.18.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
]
